Fixed scroll label overlapping

--- a/css/custom/style.css
+++ b/css/custom/style.css
@@ -230,6 +230,7 @@
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     color: white;
     font-size: large;
+    margin-left: -99px !important;
 }
 
 .padding-bottom-5
